--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -187,8 +187,8 @@ crossorigin=""/>
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-4">4 colonnes</div>
-    <div class="col-lg-8">8 colonnes</div>
+    <div class="col-4" style="background-color: blue;">4 colonnes</div>
+    <div class="col-8" style="background-color: green;">8 colonnes</div>
   </div>
 </div>
 
