--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -187,8 +187,12 @@ crossorigin=""/>
 
 <div class="container">
   <div class="row">
-    <div class="col-6" style="background-color: blue;">4 colonnes</div>
-    <div class="col-6" style="background-color: green;">8 colonnes</div>
+    <div class="col-6" style="background-color: blue;">
+      <span class="text-center"><b class="bplus">Ingrédients Naturels : </b></span>
+    </div>
+    <div class="col-6" style="background-color: green;">
+      <span class="text-center"><b class="bplus">Ingrédients Synthétiques : </b></span>
+    </div>
   </div>
 </div>
 
