--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -188,10 +188,12 @@ crossorigin=""/>
 <div class="container">
   <div class="row">
     <div class="col-6 text-center" style="background-color: blue;">
-      <span><b class="bplus">Ingrédients Naturels : </b></span>
+      <span lang="fr"><b class="bplus">Ingrédients Naturels : </b></span>
+      <span lang="en"><b class="bplus">Naturals : </b></span>
     </div>
     <div class="col-6 text-center" style="background-color: green;">
-      <span><b class="bplus">Ingrédients Synthétiques : </b></span>
+      <span lang="fr"><b class="bplus">Ingrédients Synthétiques : </b></span>
+      <span lang="en"><b class="bplus">Synthétics : </b></span>
     </div>
   </div>
 </div>
