--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -190,40 +190,19 @@ crossorigin=""/>
     <div class="col-6 text-center" style="background-color: blue;">
       <span lang="fr"><b class="bplus">Ingrédients Naturels : </b></span>
       <span lang="en"><b class="bplus">Naturals : </b></span>
+      <span lang="fr"><ul id="listeMP-Ingredients-naturels-FR"></ul></span>
+      <span lang="en"><ul id="listeMP-Ingredients-naturels-EN"></ul></span>
+
     </div>
     <div class="col-6 text-center" style="background-color: green;">
       <span lang="fr"><b class="bplus">Ingrédients Synthétiques : </b></span>
-      <span lang="en"><b class="bplus">Synthétics : </b></span>
+      <span lang="en"><b class="bplus">Synthetics : </b></span>
+      <span lang="fr"><ul id="listeMP-Ingredients-synthetiques-FR"></span>
+      <span lang="en"><ul id="listeMP-Ingredients-synthetiques-EN"></span>
     </div>
   </div>
 </div>
 
-<!--
-<div class="container-fluid listblock mt-3">
-
-  <div class="col-12" lang="fr" style="background-color: blue;">
-    <div class="col-6">
-      <span class="text-center"><b class="bplus">Ingrédients Naturels : </b></span>
-      <ul id="listeMP-Ingredients-naturels-FR"></ul>
-    </div>
-    <div class="col-6">
-      <span class="text-center"><b class="bplus">Ingrédients Synthétiques : </b></span>
-      <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
-    </div>
-  </div>
-
-  <div class="col-12" lang="en" style="background-color: blue;">
-    <div class="col-lg-6 text-center">
-      <span><b class="bplus">Naturals : </b></span>
-      <ul id="listeMP-Ingredients-naturels-EN"></ul>
-    </div>
-    <div class="col-lg-6 text-center">
-      <span><b class="bplus">Synthetics :</b></span>
-      <ul id="listeMP-Ingredients-synthetiques-EN"></ul>
-    </div>
-  </div>
-
-</div>-->
 
 <p class="mt-3">
   <span lang="fr">Pour en savoir d'avantage sur les différents types d'ingrédients, lisez notre <a href="../ingredientparfums.html" target="_BLANK">article</a> sur le sujet</span>
