--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -187,14 +187,14 @@ crossorigin=""/>
 
 <div class="container">
   <div class="row">
-    <div class="col-6 text-center" style="background-color: blue;">
+    <div class="col-6 text-center">
       <span lang="fr"><b class="bplus">Ingrédients Naturels : </b></span>
       <span lang="en"><b class="bplus">Naturals : </b></span>
       <span lang="fr"><ul id="listeMP-Ingredients-naturels-FR"></ul></span>
       <span lang="en"><ul id="listeMP-Ingredients-naturels-EN"></ul></span>
 
     </div>
-    <div class="col-6 text-center" style="background-color: green;">
+    <div class="col-6 text-center">
       <span lang="fr"><b class="bplus">Ingrédients Synthétiques : </b></span>
       <span lang="en"><b class="bplus">Synthetics : </b></span>
       <span lang="fr"><ul id="listeMP-Ingredients-synthetiques-FR"></span>
