--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -205,8 +205,8 @@ crossorigin=""/>
 
 
 <p class="mt-3">
-  <span lang="fr">Pour en savoir d'avantage sur les différents types d'ingrédients, lisez notre <a href="../ingredientparfums.html" target="_BLANK">article</a> sur le sujet</span>
-  <span lang="en">To find out more about the different types of ingredients, read our <a href="../ingredientparfums.html" target="_BLANK">article</a> on the topic</span>
+  <span lang="fr">Pour en savoir d'avantage sur les différents types d'ingrédients, lisez notre <a href="../_/ingredientparfums.html" target="_BLANK">article</a> sur le sujet</span>
+  <span lang="en">To find out more about the different types of ingredients, read our <a href="../_/ingredientparfums.html" target="_BLANK">article</a> on the topic</span>
 </p>
 
 </div>
