--- a/html/_/listdescriptors.html
+++ b/html/_/listdescriptors.html
@@ -9,8 +9,8 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Les ingrédients parfumées</title>
-<title lang="en">ScenTree - Perfume ingredients</title>
+<title lang="fr">ScenTree - Les descripteurs olfactifs</title>
+<title lang="en">ScenTree - Olfactive descriptors</title>
 <!--Description Google-->
 <meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
 <!-- Bootstrap -->
@@ -166,8 +166,8 @@ crossorigin=""/>
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center gros_titre">
   <h1 class="gros_titre text-in-color-brown">
-    <span lang="fr">LES INGREDIENTS DE SCENTREE</span>
-    <span lang="en">SCENTREE INGREDIENTS</span></h1>
+    <span lang="fr">LES FAMILLES ET DESCRIPTEURS DE SCENTREE</span>
+    <span lang="en">SCENTREE FAMILIES AND DESCRIPTORS</span></h1>
 </div>
 
 <hr>
@@ -175,39 +175,35 @@ crossorigin=""/>
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
   <h2 class="sous_titre mt-3">
-    <span lang="fr">Découvrez la liste des ingrédients présents dans ScenTree, par origine et par ordre alphabétique</span>
-    <span lang="en">Discover the list of ingredients in ScenTree, by origin and by alphabetical order.</span>
+    <span lang="fr">Découvrez la liste des familles et descripteurs présents dans ScenTree, par ordre alphabétique</span>
+    <span lang="en">Discover the list of families and descriptions in ScenTree, by alphabetical order.</span>
   </h2>
 
 <p>
-  <span lang="fr">Chaque semaine, nous rajoutons entre 6 et 8 ingrédients. Afin de vous permettre d'avoir une vue d'ensemble de tous les ingrédients présents dans ScenTree, nous les avons listés ici : </span>
-  <span lang="en">Each week we add between 6 and 8 ingredients. In order to give you an overview of all the ingredients in ScenTree, we have listed them here: </span>
+  <span lang="fr">Le projet <i>ScenTree</i> utilise un ensemble de familles et de descripteurs olfactifs pour classifier l'ensemble des matières premières disponibles sur le site. Les voici : </span>
+  <span lang="en"><i>Scentree</i> project is using a pool of olfactive families and descriptors to classify the whole raw materials available on the website. Find them below : </span>
 </p>
 
 
 <div class="container">
   <div class="row">
     <div class="col-6 text-center">
-      <span lang="fr"><b class="bplus">Ingrédients Naturels : </b></span>
-      <span lang="en"><b class="bplus">Naturals : </b></span>
-      <span lang="fr"><ul id="listeMP-Ingredients-naturels-FR"></ul></span>
-      <span lang="en"><ul id="listeMP-Ingredients-naturels-EN"></ul></span>
+      <span lang="fr"><b class="bplus">Familles principales </b></span>
+      <span lang="en"><b class="bplus">Families : </b></span>
+      <span lang="fr"><ul id="Listefamilles-Familles-principales-FR"></ul></span>
+      <span lang="en"><ul id="Listefamilles-Familles-principales-EN"></ul></span>
 
     </div>
     <div class="col-6 text-center">
-      <span lang="fr"><b class="bplus">Ingrédients Synthétiques : </b></span>
-      <span lang="en"><b class="bplus">Synthetics : </b></span>
-      <span lang="fr"><ul id="listeMP-Ingredients-synthetiques-FR"></span>
-      <span lang="en"><ul id="listeMP-Ingredients-synthetiques-EN"></span>
+      <span lang="fr"><b class="bplus">Descripteurs :</b></span>
+      <span lang="en"><b class="bplus">Descriptions : </b></span>
+      <span lang="fr"><ul id="Listefamilles-Descripteurs-secondaires-FR"></ul></span>
+      <span lang="en"><ul id="Listefamilles-Descripteurs-secondaires-EN"></ul></span>
     </div>
   </div>
 </div>
 
 
-<p class="mt-3">
-  <span lang="fr">Pour en savoir d'avantage sur les différents types d'ingrédients, lisez notre <a href="../_/ingredientparfums.html" target="_BLANK">article</a> sur le sujet</span>
-  <span lang="en">To find out more about the different types of ingredients, read our <a href="../_/ingredientparfums.html" target="_BLANK">article</a> on the topic</span>
-</p>
 
 </div>
 
