--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -325,7 +325,9 @@ crossorigin=""/>
         </p>
     </li>
   
-    <p><img class="img5creationparfum" src="../img/assistantparf.jpg" alt="La pesée d'un parfum" title="La pesée d'un parfum"></p>
+    <p style="text-align: center;">
+      <img class="img5creationparfum" src="../img/assistantparf.jpg" alt="La pesée d'un parfum" title="La pesée d'un parfum">
+    </p>
 
     <li>
         <h2 class="sous_titre">
