--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -408,7 +408,8 @@ crossorigin=""/>
 
 <hr>
 
-<div>
+<div class="mb-3">
+  <p>
     <span lang="fr"><u>Découvrez nos autres articles :</u></span>
     <span lang="en"><u>Get to read our other articles :</u></span>
     <ul class="particulier">
@@ -425,6 +426,7 @@ crossorigin=""/>
         </a>
       </li>
     </ul>
+  </p>
 </div>
 
 
