--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -412,7 +412,7 @@ crossorigin=""/>
   <p>
     <span lang="fr"><u>Découvrez nos autres articles :</u></span>
     <span lang="en"><u>Get to read our other articles :</u></span>
-    <ul class="particulier">
+    <ul class="particulier" style="font-size: 0.8em;">
       <li>
         <a href="../_/ingredientparfums.html">
           <span lang="fr"> Découvrez tous les secrets des ingredients de vos parfums !</span> 
