--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -410,8 +410,8 @@ crossorigin=""/>
 
 <div class="mb-3">
   <p>
-    <span lang="fr"><b class="bplus"><u>Découvrez nos autres articles :</u></b></span>
-    <span lang="en"><b class="bplus"><u>Get to read our other articles :</u></b></span>
+    <span lang="fr" class="mb-1"><b class="bplus"><u>Découvrez nos autres articles :</u></b></span>
+    <span lang="en" class="mb-1"><b class="bplus"><u>Get to read our other articles :</u></b></span>
     <ul class="particulier" style="font-size: 0.8em;">
       <li>
         <a href="../_/ingredientparfums.html">
