--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -412,7 +412,7 @@ crossorigin=""/>
   <p>
     <span lang="fr" class="mb-1"><b class="bplus"><u>Découvrez nos autres articles :</u></b></span>
     <span lang="en" class="mb-1"><b class="bplus"><u>Get to read our other articles :</u></b></span>
-    <ul class="particulier" style="font-size: 0.8em;">
+    <ul class="particulier mt-0" style="font-size: 0.8em;">
       <li>
         <a href="../_/ingredientparfums.html">
           <span lang="fr"> Découvrez tous les secrets des ingredients de vos parfums !</span> 
