--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -493,24 +493,25 @@ crossorigin=""/>
 </p>
 
 <hr>
-
-<div class="mt-3">
-    <span lang="fr"><u>Découvrez nos autres articles :</u></span>
-    <span lang="en"><u>Get to read our other articles :</u></span>
-    <ul class="particulier">
+<div class="mb-3">
+  <p>
+    <span lang="fr" class="mb-1"><b class="bplus"><u>Découvrez nos autres articles :</u></b></span>
+    <span lang="en" class="mb-1"><b class="bplus"><u>Get to read our other articles :</u></b></span>
+    <ul class="particulier mt-0" style="font-size: 0.8em;">
       <li>
-        <a href="../_/allergnes.html">
+        <a href="../_/allergenes.html" target="_BLANK">
           <span lang="fr"> Les parfums sont-ils si dangereux ?</span> 
-          <span lang="en"> Are perfumes dangereous ? </span>
+          <span lang="en"> Are perfumes dangereous ?</span>
         </a>
       </li>
       <li>
-        <a href="../_/creationparfum.html">
+        <a href="../_/creationparfum.html" target="_BLANK">
           <span lang="fr"> Découvrez comment vos parfums sont fabriqués </span> 
           <span lang="en"> Discover more about how your perfume are made </span>
         </a>
       </li>
     </ul>
+  </p>
 </div>
 
 </div>
