--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -186,7 +186,7 @@ crossorigin=""/>
     <span lang="fr">Introduction – Les molécules inscrites sur le packaging de nos produits cosmétiques</span>
     <span lang="en">Introduction – Molecules on our cosmetic products packaging</span>
   </h2>
-  <p>
+  <p style="text-align: center;">
     <img class="img1allergene" lang="fr" src="../img/loupeallergens.jpg" alt="Packaging produit cosmétique et allergènes" title="Packaging produit cosmétique et allergènes">
     <img class="img1allergene" lang="en" src="../img/loupeallergens.jpg" alt="Packaging cosmetic products and allergens" title="Packaging cosmetic products and allergens">
   </p>
