--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -231,7 +231,8 @@ crossorigin=""/>
       <span lang="en">Measures taken to struggle against allergy</span>
   </h2>
 
-  <p><img class="img3allergene" src="../img/rincevsnonrince.png" alt="Différences entre un produit rincé et un non-rincé" > </p>
+  <p style="text-align: center;">
+    <img class="img3allergene" src="../img/rincevsnonrince.png" alt="Différences entre un produit rincé et un non-rincé" > </p>
   <p>
     <span lang="fr">Alors, <b class="bplus">la réglementation cosmétique impose plusieurs mesures.</b> <u>Ces mesures sont prises pour que chaque personne, allergique ou non, puisse consommer les produits parfumés du marché.</u> Si vous n’êtes allergique à aucune des substances, ces mesures n’ont pas d’utilité pour vous.</span>
     <span lang="en">So, <b class="bplus">cosmetic regulations impose several measures</b>. <u>These measures are taken so that every person, allergic or not, can consume the perfumed products on the market</u>. If you are not allergic to any of the substances, these measures are of no use to you.</span>
