--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -231,8 +231,7 @@ crossorigin=""/>
       <span lang="en">Measures taken to struggle against allergy</span>
   </h2>
 
-  <p style="text-align: center;">
-    <img class="img3allergene" src="../img/rincevsnonrince.png" alt="Différences entre un produit rincé et un non-rincé" > </p>
+  
   <p>
     <span lang="fr">Alors, <b class="bplus">la réglementation cosmétique impose plusieurs mesures.</b> <u>Ces mesures sont prises pour que chaque personne, allergique ou non, puisse consommer les produits parfumés du marché.</u> Si vous n’êtes allergique à aucune des substances, ces mesures n’ont pas d’utilité pour vous.</span>
     <span lang="en">So, <b class="bplus">cosmetic regulations impose several measures</b>. <u>These measures are taken so that every person, allergic or not, can consume the perfumed products on the market</u>. If you are not allergic to any of the substances, these measures are of no use to you.</span>
@@ -243,8 +242,8 @@ crossorigin=""/>
 
     <ul class="categorieparfum" style="font-size: 0.8em;">
       <li>
-        <span lang="fr">Les produits dits « <b>rincés</b> » (shampoings, gels douche…). Ces produits ne sont pas destinés à rester en contact avec la peau après leur utilisation. </span>
-        <span lang="en">So-called « <b>rinced</b> » products (shampoos, shower gels…). These products are not to stay on the skin after usage.</span>
+        <span lang="fr">Les produits dits « <b class="bplus">rincés</b> » (shampoings, gels douche…). Ces produits ne sont pas destinés à rester en contact avec la peau après leur utilisation. </span>
+        <span lang="en">So-called « <b class="bplus">rinced</b> » products (shampoos, shower gels…). These products are not to stay on the skin after usage.</span>
       </li> 
       <li>
         <span lang="fr">Les produits dits « <b>non-rincés</b> » (parfums alcooliques, crèmes…). Pour ces produits, le contact avec la peau entraine une exposition continue s'arretant lorsque l'utilisateur du produit se lave et donc, rince le produit contenant les molécules. </span>
@@ -253,11 +252,14 @@ crossorigin=""/>
     </ul>
   </p>
   
+  <p style="text-align: center;">
+    <img class="img3allergene" src="../img/rincevsnonrince.png" alt="Différences entre un produit rincé et un non-rincé" >
+  </p>
 
   <p>
-    <span lang="fr">Dans les produits rincés, la présence d’un allergène ne doit pas excéder <b>100 ppm</b> (soit 0,01%) dans le produit fini. Dans les produits non-rincés, cette présence ne doit pas excéder <b>10 ppm</b> (0,001%).
+    <span lang="fr"><b class="bplus">Dans les produits rincés</b>, la présence d’un allergène ne doit pas excéder <b class="bplus">100 ppm</b> (soit 0,01%) dans le produit fini. <b class="bplus">Dans les produits non-rincés</b>, cette présence ne doit pas excéder <b class="bplus">10 ppm</b> (0,001%).
     <br>Par ailleurs, tout allergène présent à un taux supérieur à celui recommandé entraine sa mention sur le packaging du produit.</span>
-    <span lang="en">In rinsed products, the presence of an allergen must not exceed <b>100 ppm</b> (i.e. 0.01%) in the finished product. In non-rinsed products, the presence of an allergen shall not exceed <b>10 ppm</b> (0.001%). 
+    <span lang="en">In <b class="bplus">rinsed products</b>, the presence of an allergen must not exceed <b class="bplus">100 ppm</b> (i.e. 0.01%) in the finished product. In <b class="bplus">non-rinsed products</b>, the presence of an allergen shall not exceed <b class="bplus">10 ppm</b> (0.001%). 
     <br>In addition, any allergen used at a higher level than the recommended one must be mentioned on the product packaging.</span>
   </p>
 
