--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -245,8 +245,8 @@ crossorigin=""/>
     <span lang="en">The first one occurs during the creation of a perfume. In the event that this perfume gets in contact with the skin, there are two types of products :</span>
     <ul class="categorieparfum" style="font-size: 0.8em;">
       <li>
-        <span lang="fr">Les produits dits « <b class="bplus">rincés</b> » (shampoings, gels douche…). Ces produits ne sont pas destinés à rester en contact avec la peau après leur utilisation. </span>
-        <span lang="en">So-called « <b class="bplus">rinced</b> » products (shampoos, shower gels…). These products are not to stay on the skin after usage.</span>
+        <span lang="fr">Les produits dits « <b>rincés</b> » (shampoings, gels douche…). Ces produits ne sont pas destinés à rester en contact avec la peau après leur utilisation. </span>
+        <span lang="en">So-called « <b>rinced</b> » products (shampoos, shower gels…). These products are not to stay on the skin after usage.</span>
       </li> 
       <li>
         <span lang="fr">Les produits dits « <b>non-rincés</b> » (parfums alcooliques, crèmes…). Pour ces produits, le contact avec la peau entraine une exposition continue s'arretant lorsque l'utilisateur du produit se lave et donc, rince le produit contenant les molécules. </span>
