--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -278,8 +278,8 @@ crossorigin=""/>
     <span lang="en">Find bellow a list of the 26 so-called "probable" allergens, found in the cosmetic regulation and being used in perfumery.</span>
   </p>
 
-  <div class="tableauallergenes col-12" style="font-size: 0.8em;">
-    <table class="col-8">
+  <div class="tableauallergenes col-12 table-responsive" style="font-size: 0.8em;">
+    <table class="col-10">
     <caption>
       <span lang="fr">Les 26 allergènes en parfumerie</span>
       <span lang="en">All 26 allergens in perfumery</span>
