--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -514,10 +514,11 @@ crossorigin=""/>
 
   <hr>
 
-<div class="mt-3">
-    <span lang="fr"><u>Découvrez nos autres articles :</u></span>
-    <span lang="en"><u>Get to read our other articles :</u></span>
-    <ul class="particulier">
+<div class="mb-3">
+  <p>
+    <span lang="fr" class="mb-1"><b class="bplus"><u>Découvrez nos autres articles :</u></b></span>
+    <span lang="en" class="mb-1"><b class="bplus"><u>Get to read our other articles :</u></b></span>
+    <ul class="particulier mt-0" style="font-size: 0.8em;">
       <li>
         <a href="../_/ingredientparfums.html">
           <span lang="fr"> Découvrez tous les secrets des ingredients de vos parfums !</span> 
@@ -531,6 +532,7 @@ crossorigin=""/>
         </a>
       </li>
     </ul>
+  </p>
 </div>
 
 </div>
