--- a/html/_/listdescriptors.html
+++ b/html/_/listdescriptors.html
@@ -180,12 +180,15 @@ crossorigin=""/>
   </h2>
 
 <p>
-  <span lang="fr">Le projet <i>ScenTree</i> utilise un ensemble de familles et de descripteurs olfactifs pour classifier l'ensemble des matières premières disponibles sur le site. Les voici : </span>
-  <span lang="en"><i>Scentree</i> project is using a pool of olfactive families and descriptors to classify the whole raw materials available on the website. Find them below : </span>
+  <span lang="fr">Afin de créer les arborescence de la classification du projet <i>ScenTree</i>, nous utilisons un ensemble de familles et de descripteurs olfactifs pour classifier l'ensemble des matières premières disponibles sur le site. Vous trouverez ci-dessous un schéma explicatif de l'utilisation des familles et descripteurs ainsi qu'une liste de ces derniers. </span>
+  <span lang="en">In order to create the arborescence of the <i>ScenTree</i> project, we use a pool of olfactory families and descriptors to classify all the raw materials available on the site. You will find below an illustrative diagram of how we use of the families and descriptors as well as a list of them.  </span>
 </p>
 
+<p style="text-align: center;">
+  <img src="../img/Hierarchie.png" lang="fr" alt="Les descriptions sont attribuées par ordre d'importance olfactive" title="Les descriptions sont attribuées par ordre d'importance olfactive">
+  <img src="../img/HierarchieEN.png" lang="en" alt="Descriptions are attributed by order of olfactory importance" title="Descriptions are attributed by order of olfactory importance">
 
-<div class="container">
+<div class="container mt-3">
   <div class="row">
     <div class="col-6 text-center">
       <span lang="fr"><b class="bplus">Familles principales </b></span>
