--- a/html/_/listdescriptors.html
+++ b/html/_/listdescriptors.html
@@ -185,8 +185,8 @@ crossorigin=""/>
 </p>
 
 <p style="text-align: center;">
-  <img src="../img/Hierarchie.png" lang="fr" alt="Les descriptions sont attribuées par ordre d'importance olfactive" title="Les descriptions sont attribuées par ordre d'importance olfactive">
-  <img src="../img/HierarchieEN.png" lang="en" alt="Descriptions are attributed by order of olfactory importance" title="Descriptions are attributed by order of olfactory importance">
+  <img class="hierarchie" src="../img/Hierarchie.png" lang="fr" alt="Les descriptions sont attribuées par ordre d'importance olfactive" title="Les descriptions sont attribuées par ordre d'importance olfactive">
+  <img class="hierarchie" src="../img/HierarchieEN.png" lang="en" alt="Descriptions are attributed by order of olfactory importance" title="Descriptions are attributed by order of olfactory importance">
 </p>
 <div class="container mt-3">
   <div class="row">
