--- a/html/_/support.html
+++ b/html/_/support.html
@@ -207,7 +207,7 @@ crossorigin=""/>
             <li>DHORME Morgan -<span lang="fr" class="profession"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en" class="profession"> (Perfumer at Chidho Cosmétiques)</span></li>
             <li>DURIEZ Jean-Michel -<span lang="fr" class="profession"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en" class="profession"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></li>
             <li>FALIU Juliette -<span lang="fr" class="profession"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en" class="profession"> (Consultant and Writer at Le Nez Bavard)</span></li>
-            <li class="nouveausupporter">FATTAL A.Elie -<span lang="fr" class="profession"> (Evaluateur Fine Fragrance Junior)</span><span lang="en" class="profession"> (Junior Evaluator Fine Fragrance)</span></li>
+            <li>FATTAL A.Elie -<span lang="fr" class="profession"> (Evaluateur Fine Fragrance Junior)</span><span lang="en" class="profession"> (Junior Evaluator Fine Fragrance)</span></li>
             <li>FIZET-PREVOT Hélène -<span lang="fr" class="profession"> (Parfumeur indépendant chez HF PERFUMES)</span><span lang="en" class="profession"> (Perfumer Freelance at HF PERFUMES)</span></li>
             <li>FRACHON Axelle -<span lang="fr" class="profession"> (Formatrice Parfum)</span><span lang="en" class="profession"> (Perfume Trainer)</span></li>
             <li>LE FLEM Gabriel -<span lang="fr" class="profession"> (Chargé d'études)</span><span lang="en" class="profession"> (Study leaders)</span></li>
@@ -219,7 +219,9 @@ crossorigin=""/>
             <li>RAYNAL Sabine - <span lang="fr" class="profession"> (Enseignante à l’ISIPCA)</span><span lang="en" class="profession"> (Teacher at ISIPCA)</span></li>
             <li>REVILLARD Patrice - <span lang="fr" class="profession"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></li>
             <li>TAMEN Jeremy -<span lang="fr" class="profession"> (Formateur expert dans les Fragrances du thé)</span><span lang="en" class="profession"> (Trainer - Tea fragrances expert)</span></li>
+            <li>TESSON Olivier -<span lang="fr" class="profession"> (Fondateur d'Olivier Parfumerie (Youtube/Instagram) )</span><span lang="en" class="profession"> (Founder of Olivier Parfumerie (Youtube/Instagram) )</span></li>
             <li>VILLEPREUX Céline -<span lang="fr" class="profession"> (Experte Matières Premières – Firmenich)</span><span lang="en" class="profession"> (Raw Materials Expert at Firmenich)</span></li>
+            class="nouveausupporter"
           </ul>
         </p>
         <p class="mt-3 m-0 p-0 text-center">
