--- a/html/_/support.html
+++ b/html/_/support.html
@@ -185,8 +185,8 @@ crossorigin=""/>
     <div class="row"> 
       <div class="col-6 col-xs-12 entreprise">
         <p class="mt-3 m-0 p-0 text-center">
-          <span lang="fr"><b><i>Sociétés partenaires</i></b> </span>
-          <span lang="en"><b><i>Partner companies</i></b> </span>
+          <span lang="fr"><b class="bplus"><i>Sociétés partenaires</i></b> </span>
+          <span lang="en"><b class="bplus"><i>Partner companies</i></b> </span>
         </p>
         <p class="col-12 col-xs-12 mt-3">
            <a class="btn offset-1 col-4 col-xs-12 logosupporter" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
@@ -195,11 +195,11 @@ crossorigin=""/>
 
       <div class="col-6 col-xs-12 particulier">
         <p class="mt-3 m-0 p-0 text-center">
-          <span lang="fr"><b><i>Professionnels ayant participé à la base de données ScenTree</i></b> </span>
-          <span lang="en"><b><i>Professionals who participated to the ScenTree database :</i></b> </span>
+          <span lang="fr"><b class="bplus"><i>Professionnels ayant participé à la base de données ScenTree</i></b> </span>
+          <span lang="en"><b class="bplus"><i>Professionals who participated to the ScenTree database :</i></b> </span>
         </p>
         <p>
-          <ul>
+          <ul style="font-size: 0.8em;">
             <li>ASTORRI Marc -<span lang="fr" class="profession"> (Ancien Apprenti Parfumeur)</span><span lang="en" class="profession"> (Former Perfumer Apprentice)</span></li>
             <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
             <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
@@ -219,9 +219,8 @@ crossorigin=""/>
             <li>RAYNAL Sabine - <span lang="fr" class="profession"> (Enseignante à l’ISIPCA)</span><span lang="en" class="profession"> (Teacher at ISIPCA)</span></li>
             <li>REVILLARD Patrice - <span lang="fr" class="profession"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></li>
             <li>TAMEN Jeremy -<span lang="fr" class="profession"> (Formateur expert dans les Fragrances du thé)</span><span lang="en" class="profession"> (Trainer - Tea fragrances expert)</span></li>
-            <li>TESSON Olivier -<span lang="fr" class="profession"> (Fondateur d'Olivier Parfumerie (Youtube/Instagram) )</span><span lang="en" class="profession"> (Founder of Olivier Parfumerie (Youtube/Instagram) )</span></li>
+            <li class="nouveausupporter">TESSON Olivier -<span lang="fr" class="profession"> (Fondateur d'Olivier Parfumerie (Youtube/Instagram) )</span><span lang="en" class="profession"> (Founder of Olivier Parfumerie (Youtube/Instagram) )</span></li>
             <li>VILLEPREUX Céline -<span lang="fr" class="profession"> (Experte Matières Premières – Firmenich)</span><span lang="en" class="profession"> (Raw Materials Expert at Firmenich)</span></li>
-            class="nouveausupporter"
           </ul>
         </p>
         <p class="mt-3 m-0 p-0 text-center">
