--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -188,6 +188,48 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h3 id="heading19"><span lang="fr">23 février 2020</span><span lang="en">23<sup>rd</sup> february 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
+          </h3>
+          <p>
+              <a class="interpop"  href="../ingredients/Sambac_Jasmine_Absolute__Jasmin_Sambac_Absolue.html"><span lang="en">Sambac Jasmine Absolute (CAS N°: 91770-14-8)</span><span lang="fr">Jasmin Sambac Absolue (CAS N°: 91770-14-8)</span></a>
+              <br><a class="interpop"  href="../ingredients/Pennyroyal_EO__Menthe_Pouliot_HE.html"><span lang="en">Pennyroyal EO (CAS N°: 90064-00-9)</span><span lang="fr">Menthe Pouliot HE (CAS N°: 90064-00-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Bergamot_Mint_EO__Menthe_Citronée_HE.html"><span lang="en">Bergamot Mint EO (CAS N°: 85085-49-0)</span><span lang="fr">Menthe Citronée HE (CAS N°: 85085-49-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Benzyl_Benzoate__Benzoate_de_Benzyle.html"><span lang="en">Benzyl Benzoate (CAS N°: 120-51-4)</span><span lang="fr">Benzoate de Benzyle (CAS N°: 120-51-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Farnesol__Farnésol.html"><span lang="en">Farnesol (CAS N°: 4602-84-0)</span><span lang="fr">Farnésol (CAS N°: 4602-84-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Rosyrane_Super®__Rosyrane_Super®.html"><span lang="en">Rosyrane Super<sup>®</sup> (CAS N°: 60335-71-9)</span><span lang="fr">Rosyrane Super<sup>®</sup> (CAS N°: 60335-71-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Rhubafuran®__Rhubafuran®.html"><span lang="en">Rhubafuran<sup>®</sup> (CAS N°: 82461-14-1)</span><span lang="fr">Rhubafuran<sup>®</sup> (CAS N°: 82461-14-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Benzyl_Alcohol__Alcool_Benzylique.html"><span lang="en">Benzyl Alcohol (CAS N°: 100-51-6)</span><span lang="fr">Alcool Benzylique (CAS N°: 100-51-6)</span></a>
+          </p>
+          <p>
+            <span lang="fr">Lancement d'une série de 3 articles à destination du grand public</span>
+            <span lang="en">Launch of a series of 3 topics for a lay audience</span>
+            <ul class="particulier mt-2" style="font-size: 0.8em;">
+              <li>
+                <a class="interpop" href="../_/ingredientparfums.html" target="_blank">
+                  <span lang="fr"> Découvrez tous les secrets des ingredients de vos parfums !</span> 
+                  <span lang="en"> Discover more about your perfume ingredients !</span>
+                </a>
+              </li>
+              <li>
+                <a class="interpop" href="../_/allergenes.html" target="_blank">
+                  <span lang="fr"> Nos parfums sont-ils dangereux ?</span> 
+                  <span lang="en"> Are our perfumes dangerous ?</span>
+                </a>
+              </li>
+              <li>
+                <a class="interpop" href="../_/creationparfum.html" target="_blank">
+                  <span lang="fr"> Découvrez comment vos parfums sont fabriqués !</span> 
+                  <span lang="en"> Discover more about how your perfume are made !</span>
+                </a>
+              </li>
+            </ul>
+          </p>
+          
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h3 id="heading19"><span lang="fr">16 février 2020</span><span lang="en">16<sup>th</sup> february 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h3>
