--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -202,8 +202,8 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Benzyl_Alcohol__Alcool_Benzylique.html"><span lang="en">Benzyl Alcohol (CAS N°: 100-51-6)</span><span lang="fr">Alcool Benzylique (CAS N°: 100-51-6)</span></a>
           </p>
           <p>
-            <span lang="fr">Lancement d'une série de 3 articles à destination du grand public</span>
-            <span lang="en">Launch of a series of 3 topics for a lay audience</span>
+            <u><span lang="fr">Lancement d'une série de 3 articles à destination du grand public</span>
+            <span lang="en">Launch of a series of 3 topics for a lay audience</span></u>
             <br>
                 <a class="interpop" href="../_/ingredientparfums.html" target="_blank">
                   <span lang="fr"> Découvrez tous les secrets des ingredients de vos parfums !</span> 
