--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -220,7 +220,7 @@ crossorigin=""/>
                   <span lang="en"> Discover more about how your perfume are made !</span>
                 </a>
           </p>
-          
+          <p><span lang="fr"> Suite de la refonte et de l'harmonisation des interfaces de certaines pages du ruban droit. </span><span lang="en">Continuation of the revamping and the harmonization of some page interfaces from right ribbon buttons.</span></p>
         </div>
       </li>
       <li>
