--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -224,7 +224,7 @@ crossorigin=""/>
           <span lang="en"><b class="bplus">BASES</b></span>
         </p>
         <p class="card-text">
-          <span lang="fr">Compositions parfumées, ingrédient crée préalablement par un parfumeur et qui contient, lui même, plusieurs ingrédients.</span>
+          <span lang="fr">Compositions parfumées, ingrédient créé préalablement par un parfumeur et qui contient, lui même, plusieurs ingrédients.</span>
           <span lang="en">Perfumed compositions, an ingredient created by a perfumer and which also contains several ingredients.</span>
         </p>
       </div>
@@ -330,8 +330,8 @@ crossorigin=""/>
               </li>
                 <span lang="fr">Les <b>concrêtes</b> résultent de l’extraction d’une <b class="bplus">plante fraiche</b>. Il peut s’agir d’une fleur (<a class="interpop" href="../ingredients/Rose_de_Mai_Absolute__Rose_de_Mai_Absolue.html" target="_blank">Rose de Mai Absolue</a>), d’une fève (<a class="interpop" href="../ingredients/Tonka_Bean_Absolute__Fève_Tonka_Absolue.html" target="_blank">Fève Tonka Absolue</a>), d’une graine (<a class="interpop" href="../ingredients/Fenugreek_Absolute__Fenugrec_Absolue.html" target="_blank">Fenugrec Absolue</a>)… Cette extraction se déroule en plusieurs étapes. 
                 <br>La première consiste à plonger le végétal dans un solvant organique tel que l’hexane ou l’éther de pétrole. Après cette extraction pouvant durer plusieurs heures, les plantes sont retirées du solvant (on dit alors qu’elles sont « <u>épuisées</u> »). Nous obtenons un mélange solvant/matières odorantes qui, après évaporation du solvant, laisse place à une <b class="bplus">concrète</b>. C’est une pâte, car elle comprend les cires de la plante, qui ont aussi été extraites par le solvant utilisé. 
-                <br>Pour rendre la concrète utilisable en parfumerie, il faut la <u>diluer dans l’alcool</u> afin de la solubiliser, puis refroidir le mélange pour forcer la précipitation des cires. Après une étape de filtrage et une nouvelle évaporation du solvant (l'alcool cette fois), le produit obtenu est liquide, parfois visqueux, et limpide : c’est l’<b class="bplus">absolue</b>.
-                <br>Ces nombreuses étapes de traitement et d'extraction amènent à un rendement extrèmement faible entre la masse initiale de produit frais et la masse d'absolue finale. Ce <u>rendement excède rarement les 5%</u>. C'est ainsi que ces produits, très riches et complexes olfactivement, sont également <u>très couteux</u> et doivent donc être utilisés avec partimonie. </span>
+                <br>Pour rendre la concrète utilisable en parfumerie, il faut la <u>diluer dans l’alcool</u> afin de la solubiliser, puis refroidir le mélange pour forcer la précipitation des cires. Après une étape de filtration et une nouvelle évaporation du solvant (l'alcool cette fois), le produit obtenu est liquide, parfois visqueux, et limpide : c’est l’<b class="bplus">absolue</b>.
+                <br>Ces nombreuses étapes de traitement et d'extraction amènent à un rendement extrèmement faible entre la masse initiale de produit frais et la masse d'absolue finale. Ce <u>rendement excède rarement les 5%</u>. C'est ainsi que ces produits, très riches et complexes olfactivement, sont également <u>très coûteux</u> et doivent donc être utilisés avec parcimonie. </span>
                 
 
                 <span lang="en"><b>Concretes</b> are the result of the extraction of a <b class="bplus">fresh plant</b>. It can be a flower (<a class="interpop" href="../ingredients/Rose_de_Mai_Absolute__Rose_de_Mai_Absolue.html" target="_blank">Rose de Mai Absolute</a>), a bean (<a class="interpop" href="../ingredients/Tonka_Bean_Absolute__Fève_Tonka_Absolue.html" target="_blank">Tonka Bean Absolute</a>), a seed (<a class="interpop" href="../ingredients/Fenugreek_Absolute__Fenugrec_Absolue.html" target="_blank">Fenugreek Absolute</a>)... This extraction is carried out in several stages.
@@ -369,7 +369,7 @@ crossorigin=""/>
             <span lang="fr">Les extraits CO<sub>2</sub> supercritique : </span>
             <span lang="en">Supercritical CO<sub>2</sub> extracts : </span>
           </li>
-            <span lang="fr">Ces ingrédients résultent de la mise en contact d’un végétal quelconque (il peut même s’agir de certains fruits, habituellement non extraits) avec du dioxyde de carbone à plus de 31°C et sous 74 bar de pression. Mettre le CO<sub>2</sub> sous cette forme est coûteux, mais ce type d’extraction fourni un résultat olfactif sans égal, et offre à la palette du parfumeur des extraits d’une grande qualité.</span>
+            <span lang="fr">Ces ingrédients résultent de la mise en contact d’un végétal quelconque (il peut même s’agir de certains fruits, habituellement non extraits) avec du dioxyde de carbone à plus de 31°C et sous 74 bar de pression. Mettre le CO<sub>2</sub> sous cette forme est coûteux, mais ce type d’extraction fournit un résultat olfactif sans égal, et offre à la palette du parfumeur des extraits d’une grande qualité.</span>
             <span lang="en">These ingredients result from the contact of any plant (it can even be some fruits, usually not extracted) with carbon dioxide at over 31°C and 74 bar of pressure. Putting CO<sub>2</sub> in this form is expensive, but this type of extraction provides an awesome olfactory result, and offers to the perfumer's palette high quality extracts</span>    
         </ol>
       </p>
@@ -451,7 +451,7 @@ crossorigin=""/>
                   <li class="catégories2">
                     <span>IFRA : </span>
                   </li>
-                    <span lang="fr">L’IFRA est l’association agissant notamment pour la réglementation des matières premières présentant un danger, possède une grande influence sur la restriction de l’utilisation de certains ingrédients.</span>
+                    <span lang="fr">L’IFRA est l’association agissant notamment pour la réglementation des matières premières présentant un danger et possède une grande influence sur la restriction de l’utilisation de certains ingrédients.</span>
                     <span lang="en">The IFRA is the association acting in particular for the regulation of hazardous raw materials. It has a great influence on the restriction of use of certain ingredients. Its goal is to guide raw materials usage, after safety and toxicology studies. Thus, a formula that complies with IFRA standards is known as safe to use.</span>
                   <li class="catégories2">
                     <span lang="fr">Les allergènes : </span> 
