--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -203,7 +203,7 @@ crossorigin=""/>
     </h2>
 
   <p>
-    <span lang="fr">Dans la composition de nos parfums portés et utilisés chaque jour, <b class="bplus">26 allergènes réputés peuvent exister</b>. Cette liste de 26 molécules et extraits est dictée par l’ <a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target="_blank">annexe III du règlement cosmétique européen 1223/2009</a>. Il s’agit de molécules qui, <b class="bplus">lorsqu'elle sont présentes en quantités importantes</b>, peuvent avoir la faculté de se fixer à une protéine présente dans notre peau. Cela peut entrainer une réaction (cf. schéma ci-dessous) fassant réagir notre système immunitaire et provoquant ainsi une réaction allergique. 
+    <span lang="fr">Dans la composition de nos parfums portés et utilisés chaque jour, <b class="bplus">26 allergènes réputés peuvent exister</b>. Cette liste de 26 molécules et extraits est dictée par l’ <a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target="_blank">annexe III du règlement cosmétique européen 1223/2009</a>. Il s’agit de molécules qui, <b class="bplus">lorsqu'elle sont présentes en quantités importantes</b>, peuvent avoir la faculté de se fixer à une protéine présente dans notre peau. Cela peut entrainer une réaction (cf. schéma ci-dessous) faisant intervenir notre système immunitaire et provoquant ainsi une réaction allergique. 
     <br>A noter également que certaines substances réputées allergènes le sont <u>uniquement lorsqu'un facteur annexe s'installe et induit une transformation chimique</u>. C'est le cas notamment de certains ingrédients qui, au contact du soleil, peuvent s'oxyder et devenir de puissants allergènes. 
     <br>Les réactions allergiques peuvent alors se manifester sous la forme de plaques rouges, de picotements etc. Le comité scientifique pour la sécurité des consommateurs a répertorié <b class="bplus">54 molécules et 28 extraits naturels pouvant provoquer une réaction allergique chez l’Homme</b>. Cette dernière liste n’est <u>pas exploitée dans le milieu de la parfumerie</u>.</span>
 
@@ -249,7 +249,7 @@ crossorigin=""/>
         <span lang="en">So-called « <b>rinced</b> » products (shampoos, shower gels…). These products are not to stay on the skin after usage.</span>
       </li> 
       <li>
-        <span lang="fr">Les produits dits « <b>non-rincés</b> » (parfums alcooliques, crèmes…). Pour ces produits, le contact avec la peau entraine une exposition continue s'arretant lorsque l'utilisateur du produit se lave et donc, rince le produit contenant les molécules. </span>
+        <span lang="fr">Les produits dits « <b>non-rincés</b> » (parfums alcooliques, crèmes…). Pour ces produits, le contact avec la peau entraine une exposition continue s'arrêtant lorsque l'utilisateur du produit se lave et donc, rince le produit contenant les molécules. </span>
         <span lang="en">So-called « <b>not-rinced</b> » products (alcoholic perfumes, lotions…). Skin contact with these products is permanent and stops when the perfumes evaporates or when the consumer washes the concerned zone.</span>
       </li>
     </ul>
